--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ h1 {
   font-size: 1em;
 }
 
-header {
-  box-shadow: 0 1em 2em rgba(0, 0, 0, .07);
+/* Utilities */
+.opacity-2 {
+  opacity: .2;
 }
