--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,13 @@ h1 {
 
 h2 {
   color: #0072e1;
+  padding-left: 1rem;
+}
+
+hr {
+  margin-top: 1rem;
+  border: 1px solid #c3c1c1;
+  box-shadow: 0 .2rem .5rem rgba(0, 0, 0, .1);
 }
 
 /* Utilities */
